# testlang

./: .gitignore  CMakeLists.txt  result.ast  test.sh  test.tl
src/: ast.cpp  ast.hpp  lexer.lxx  main.cpp  parser.yxx  report.cpp  report.hpp  scanner.lxx  test.tl
